Make mini_installer ~500 bytes larger.

Merging rdata and text breaks link.exe /incremental, is surprising
for unexpecting bystanders, and 500 bytes is way below the daily
fluctuation in binary size.

Bug: 749768
Change-Id: I3c06990faf7dc5297cad0b4fd781225d52d31113
Reviewed-on: https://chromium-review.googlesource.com/590175
Reviewed-by: Gabriel Charette <gab@chromium.org>
Commit-Queue: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490107}