chrome/installer/mini_installer/mini_installer.cc
@@ -19,9 +19,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 //   OptimizeForWindows98="1" linker: /OPT:NOWIN98
 //   linker: /SAFESEH:NO
 
-// have the linker merge the sections, saving us ~500 bytes.
-#pragma comment(linker, "/MERGE:.rdata=.text")
-
 #include "chrome/installer/mini_installer/mini_installer.h"
 
 #include <windows.h>
